kubernetes/hass/helm/statefulset.yaml
---
# Source: home-assistant/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hass-home-assistant
  namespace: hass
  labels:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2026.9.1
spec:
  serviceName: hass-home-assistant
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: hass
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hass
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/version: 2026.9.1
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: hass-home-assistant
      securityContext:
        {}
      containers:
        - name: home-assistant
          securityContext:
            {}
          image: "ghcr.io/home-assistant/home-assistant:2026.9.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /config
            name: hass-home-assistant
          - mountPath: /root/.ssh
            name: ssh-key
            readOnly: true
      volumes:
      - name: config-map
        projected:
          sources:
          - configMap:
              name: hass-config
          - secret:
              name: hass-secrets-file
          - secret:
              items:
              - key: caseta-bridge.crt
                mode: 420
                path: caseta-bridge.crt
              - key: caseta.crt
                mode: 420
                path: caseta.crt
              - key: caseta.key
                mode: 384
                path: caseta.key
              name: hass-caseta-certificates
      - name: ssh-key
        secret:
          defaultMode: 256
          items:
          - key: ssh-privatekey
            path: id_ed25519
          secretName: hass-ssh-key
  volumeClaimTemplates:
  - metadata:
      name: hass-home-assistant
    spec:
      accessModes:
        - ReadWriteOncePod
      resources:
        requests:
          storage: 10Gi
