kubernetes/hass/helm/ingress.yaml
---
# Source: home-assistant/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-home-assistant
  namespace: hass
  labels:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2026.9.3
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: home-assistant.png
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/pod-selector: app.kubernetes.io/name=hass
spec:
  tls:
    - hosts:
        - "hass.k.oneill.net"
      secretName: hass-tls
  rules:
    - host: "hass.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass-home-assistant
                port:
                  number: 8080
